--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -7,6 +7,14 @@
   @media screen and (max-width: 1310px) {
     padding: 7% 0 26%;
   }
+
+  @media screen and (max-width: 1170px) {
+    padding: 7% 0 10%;
+  }
+
+  @media screen and (max-width: 960px) {
+    display: none;
+  }
 }
 
 .clients__title {
@@ -89,11 +97,23 @@
         padding-right: 10px;
         border-right: 1px solid #fff;
         background-image: url("../assets/img/endnote-icon-left.png");
+
+        @media screen and (max-width: 1310px) {
+          width: 50%;
+          text-align: center;
+          background: 0;
+        }
       }
 
       &.card-endnote__right {
         width: 50%;
         background-image: url("../assets/img/endnote-icon-right.png");
+
+        @media screen and (max-width: 1310px) {
+          padding-right: 10px;
+          text-align: center;
+          background: 0;
+        }
       }
     }
   }
