--- a/scss/layout/_on-control.scss
+++ b/scss/layout/_on-control.scss
@@ -40,6 +40,11 @@
   margin: 2% auto 0;
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15);
 
+  @media screen and (max-width: 960px) {
+    width: 90%;
+    margin: 5% auto 0;
+  }
+
   iframe {
     width: 100%;
     height: 100%;
