--- a/scss/layout/_types-repair.scss
+++ b/scss/layout/_types-repair.scss
@@ -25,6 +25,10 @@
     flex-flow: wrap;
     justify-content: center;
   }
+
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
 .types-repair__bullets-wrapper {
